@@ -1,5 +1,8 @@
-#include <config.h>
+#ifdef __cplusplus
+#define NULL __null
+#endif
 
+#include <config.h>
 
 #include <assert.h>
 #include <ctype.h>
